--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.4.4",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "tailwindcss": "^3.3.2"
