--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "react-select": "^5.7.3",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
